# Projects_codarium

./: README.md
selene_and_css_tests/: .gitignore  pyproject.toml
selene_and_css_tests/tests/: test_selene_and_css.py
task_2/test_ecosia/: pyproject.toml
tests_ecosia/: .gitignore  pyproject.toml
tests_ecosia/tests/: test_ecosia.py
