[tool.poetry]
name = "selene_and_css_tests"
version = "0.1.0"
description = ""
authors = ["Hanna Zosymenko <ankera239@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selene = {version = "^2.*", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
